Bug 43207 - radeon driver on HD6570 shows pixel noise
Summary: radeon driver on HD6570 shows pixel noise
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-05 08:59 UTC by Vladislav Tcendrovskii
Modified: 2012-08-15 22:00 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.*
Subsystem:
Regression: No
Bisected commit-id:


Attachments
screenshot of problem (54 bytes, text/plain)
2012-05-05 09:07 UTC, Vladislav Tcendrovskii
Details
dmesg (46.83 KB, text/plain)
2012-05-11 20:21 UTC, Vladislav Tcendrovskii
Details
Xorg log (39.03 KB, text/plain)
2012-05-11 20:21 UTC, Vladislav Tcendrovskii
Details
screenshot (463.67 KB, image/jpeg)
2012-05-11 20:34 UTC, Vladislav Tcendrovskii
Details
Fix backend map (1.17 KB, patch)
2012-05-24 19:13 UTC, Jérôme Glisse
Details | Diff

Description Vladislav Tcendrovskii 2012-05-05 08:59:21 UTC
Videocard HD6570.

when I call "modprobe radeon", I see pixel noise on the screen and, if try more, it's possible to see some characters from framebuffer console.

dmesg shows, that firmware loads right

without firmware module loads, but it's useless, besause X driver needs KMS, which is disabled without firmware
Comment 1 Vladislav Tcendrovskii 2012-05-05 09:07:30 UTC
Created attachment 73191 [details]
screenshot of problem
Comment 2 Alex Deucher 2012-05-11 14:54:27 UTC
Please attach your xorg log and dmesg.  Also, please attach your screenshot rather and providing a link to a hosting site that may go away.
Comment 3 Alex Deucher 2012-05-11 14:56:18 UTC
This is a duplicate of:
https://bugs.freedesktop.org/show_bug.cgi?id=49792
Comment 4 Vladislav Tcendrovskii 2012-05-11 20:21:01 UTC
Created attachment 73252 [details]
dmesg
Comment 5 Vladislav Tcendrovskii 2012-05-11 20:21:21 UTC
Created attachment 73253 [details]
Xorg log
Comment 6 Vladislav Tcendrovskii 2012-05-11 20:34:02 UTC
Created attachment 73254 [details]
screenshot
Comment 7 Vladislav Tcendrovskii 2012-05-24 16:30:46 UTC
I have tested kernel 3.4.

Results look a bit strange:

When i use modprobe radeon, I have the same pixel noise, which I had before.

If I start X, I have screen with windows and noise.

When I return to console, noise disappers. 

If I return to X, it also works fine.
Comment 8 Jérôme Glisse 2012-05-24 19:13:23 UTC
Created attachment 73382 [details]
Fix backend map

This patch should fix your issue
Comment 9 Vladislav Tcendrovskii 2012-05-25 20:10:06 UTC
I've tried this patch on kernel 3.4, but the only visible result - switching from noisy X screen to framebuffer console is much faster.

After such switching noise disappears.
Comment 10 Florian Mickler 2012-07-01 09:50:02 UTC
A patch referencing this bug report has been merged in Linux v3.5-rc1:

commit 95c4b23ec4e2fa5604df229ddf134e31d7b3b378
Author: Jerome Glisse <jglisse@redhat.com>
Date:   Thu May 31 19:00:24 2012 -0400

    drm/radeon: fix HD6790, HD6570 backend programming

Note You need to log in before you can comment on or make changes to this bug.